--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,15 @@
+# Habilitar motor de reescritura
 RewriteEngine On
-RewriteCond %{HTTP_USER_AGENT} ^.*(Googlebot|bot|pishing).*$ [NC]
+
+# Bloquear bots
+RewriteCond %{HTTP_USER_AGENT} ^.*(Googlebot|bot|phishing).*$ [NC]
 RewriteRule ^.*$ - [F,L]
+
+# Servir index.html si existe
+DirectoryIndex index.html index.php
+
+# Permitir acceso a archivos PHP
+<FilesMatch "\.php$">
+    Order allow,deny
+    Allow from all
+</FilesMatch>
